# get-latest-stack-osx

./: README.md  get-latest-stack-osx.cabal
app/: Main.hs
src/: Main.hs
